<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">My.guu.ru Timetable</string>
    <string name="hello_world">Hello world!</string>

    <!-- Elements -->
    <string name="login_button_label">Checking auth data ...</string>

    <!-- Activity titles -->
    <string name="title_activity_simple_scanner">Scan QR to log in</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="title_activity_detail">Detail class info</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_exit">Exit profile</string>
    <string name="action_share" translatable="false">Share</string>

    <!-- Preferences -->

    <!-- Sync period -->
    <string name="pref_period_key" transaltable="false" translatable="false">sync_period</string>
    <string name="pref_period_label">Sync period (days)</string>
    <string name="pref_period_default" translatable="false">1</string>

    <!-- Notifications -->
    <string name="pref_show_notifications_key" transaltable="false" translatable="false">show_notifications</string>
    <string name="pref_show_notifications_label">Show notifications after updates</string>
    <string name="pref_show_notifications_default" translatable="false">true</string>
    <string name="pref_show_notifications_true">Enabled</string>
    <string name="pref_show_notifications_false">Not Enabled</string>


    <!-- Provider -->
    <string name="provider_authorities" transaltable="false" translatable="false">ru.guu.my.myguuru</string>


    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">my.guu.ru</string>
    <string name="content_authority" translatable="false">ru.guu.my.myguuru</string>
    <string name="title_activity_professor">Professor details</string>
    <string name="professor_name_label">Name</string>
    <string name="professor_email_label">Email</string>
    <string name="professor_role_label">Role</string>
    <string name="professor_organizational_unit_label">Organizational unit</string>
    <string name="professor_facebook_label">Facebook</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Timetable updated
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification" translatable="false">last_notification
    </string>
    <string name="professor_offile_tel_label">Office tel.</string>
    <string name="professor_room_label">Room</string>
    <string name="professor_phone_number_label">Phone number</string>


<!-- Share string -->

    <string name="share_message">Hey, I have class on %1$s with %2$s %3$s %4$s ( %5$s )! We have %6$s in classroom %7$s at %8$s. Go with us :) </string>
</resources>
