<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.guu.my.myguuruclient.ProfessorActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp">


        <ImageView
            android:id="@+id/detail_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_professors_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:id="@+id/detail_organizational_unit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/detail_role"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/professor_name_label"
                    android:text="@string/professor_name_label"
                    style="@style/ProfessorAttributeLabel"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/professor_name_value"
                    style="@style/ProfessorAttributeValue"/>
            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/professor_email_label"
                    android:text="@string/professor_email_label"
                    style="@style/ProfessorAttributeLabel"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/professor_email_value"
                    style="@style/ProfessorAttributeValue"/>
            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/professor_role_label"
                    android:text="@string/professor_role_label"
                    style="@style/ProfessorAttributeLabel"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/professor_role_value"
                    style="@style/ProfessorAttributeValue"/>
            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/professor_organizational_unit_label"
                    android:text="@string/professor_organizational_unit_label"
                    style="@style/ProfessorAttributeLabel"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/professor_organizational_unit_value"
                    style="@style/ProfessorAttributeValue"/>
            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/professor_facebook_label"
                    android:text="@string/professor_facebook_label"
                    style="@style/ProfessorAttributeLabel"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/professor_facebook_value"
                    style="@style/ProfessorAttributeValue"/>
            </LinearLayout>
    </LinearLayout>

</LinearLayout>
